# AI_Litho

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  data_vis.py  densitystudy.py  environment.yml  expansioncoeff.py  plot_model_comp.py  pyproject.toml  setup.bat  setup.sh  sigmoidstudy.py  spatialstudy.py  spatialview.py
FNO-Conv-main/: TrainFNO.py
FNO-Conv-main/Dataloaders/: TimeLoaders.py  all_experiments_config.json  load_utils.py
FNO-Conv-main/Modules/: FNO2d.py  FNO2d_pl.py  GeneralModel_pl.py
FNO-Conv-main/configs/: config_ns_pwc.json
FNO-Conv-main/utils/: utils_read.py
data-exploration/: densityresolutionstudy.py  densitystudy.py  metricstudy.py  spatialstudy.py
lithobench-main/: .gitignore  LICENSE  README.md  requirements_conda.txt  requirements_pip.txt
lithobench-main/MetalSet/: rule_cell.oas
lithobench-main/config/: lithosimple.txt
lithobench-main/lithobench/: dataset.py  evaluate.py  model.py  plot_model_comp.py  test.py  train.py
lithobench-main/lithobench/ilt/: cfnoilt.py  damoilt.py  ganopc.py  neuralilt.py
lithobench-main/lithobench/litho/: cfnolitho.py  damolitho.py  doinn.py  lithogan.py
lithobench-main/pycommon/: glp.py  infoGDS.py  readGDS.py  settings.py  utils.py
lithobench-main/pyilt/: curvmulti.py  evaluation.py  initializer.py  simpleilt.py
lithobench-main/pylitho/: exact.py  simple.py
lithobench-main/saved/: README.md
lithobench-main/scripts/: runGANOPC.sh
lithobench-main/work/: README.md
resolution_study_output/: resolution_study_results.csv
sigmoidstudy_results/: sigmoid_results.json
src/: __init__.py  example.py
tests/: __init__.py  test_example.py
